feat: adiciona gerenciamento de usuários e funções
